@@ -1,3 +1,7 @@
+2009-08-02  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/i386/configure.in: Add test for <cpuid.h>.
+
 2009-07-31  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/unix/sysv/linux/x86_64/____longjmp_chk.S (longjmp_msg): Yet
